--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>HackSprint Flowers</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to the HackSprint NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+            The Seeds will blossom at the appropriate time! see it live on open sea testnet
         </p>
       </div>
     </section>
@@ -81,22 +81,22 @@
         <div id="countdown">
           <ul class="count-down" data-date="">
             <li class="clock-item">
-              <span class="count-number days">20</span>
+              <span class="count-number days">0</span>
               <p class="count-text">Days</p>
             </li>
 
             <li class="clock-item">
-              <span class="count-number hours">20</span>
+              <span class="count-number hours">0</span>
               <p class="count-text">Hour</p>
             </li>
 
             <li class="clock-item">
-              <span class="count-number minutes">20</span>
+              <span class="count-number minutes">3</span>
               <p class="count-text">Min</p>
             </li>
 
             <li class="clock-item">
-              <span class="count-number seconds">20</span>
+              <span class="count-number seconds">0</span>
               <p class="count-text">Sec</p>
             </li>
           </ul>
@@ -104,11 +104,11 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          Mayde some original art in the next batch?
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://classes.holbertontulsa.com/software-developer-lpb/?utm_term=holberton&utm_campaign=Branded+%7C+Search&utm_source=adwords&utm_medium=ppc&hsa_acc=2236026088&hsa_cam=12521055298&hsa_grp=123058220150&hsa_ad=554121602818&hsa_src=g&hsa_tgt=kwd-300668487307&hsa_kw=holberton&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gclid=CjwKCAjwu_mSBhAYEiwA5BBmf2MCohAt7vaNeRx1O1-efxbEvV6UR7dJ-LPnBkZkT1VUnssLKw3PfBoC1k8QAvD_BwE"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
@@ -118,15 +118,15 @@
           <div class="info-container">
             <div>
               <h3>Supply</h3>
-              <p id="totalSupply">100</p>
+              <p id="totalSupply">20</p>
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">1 ETH</p>
+              <p id="pricePerMint">.005 ETH</p>
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">5 per wallet</p>
+              <p id="maxPerMint">1 per wallet</p>
             </div>
           </div>
           <div class="mint-qty">
