--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <video src="images/x-icon/Tulsa.mp4" mute loop autoplay ></video>
     <header>
       <div class="container">
         <div class="logo">
