--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <video src="images/x-icon/Tulsa.mp4" mute loop autoplay></video>
+    <video src="images/x-icon/Tulsa.mp4" mute loop autoplay ></video>
 
     <header>
       <div class="container">
@@ -163,7 +163,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://testnets.opensea.io/collection/hacksprintflower"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -178,32 +178,21 @@
       <div class="splide__track">
         <ul class="splide__list">
           <li class="splide__slide">
-            <img src="images/slider/0.png" />
+            <img src="images/slider/seedy_0000_Layer-10.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/1.png" />
+            <img src="images/slider/seedy_0001_Layer-8.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/2.png" />
+            <img src="images/slider/seedy_0002_Layer-6.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/3.png" />
+            <img src="images/slider/seedy_0003_Layer-4.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/4.png" />
+            <img src="images/slider/seedy_0004_Layer-2.png" />
           </li>
-          <li class="splide__slide">
-            <img src="images/slider/5.png" />
-          </li>
-          <li class="splide__slide">
-            <img src="images/slider/6.png" />
-          </li>
-          <li class="splide__slide">
-            <img src="images/slider/7.png" />
-          </li>
-          <li class="splide__slide">
-            <img src="images/slider/8.png" />
-          </li>
+         
         </ul>
       </div>
     </div>
