--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,8 +29,9 @@
     <link rel="stylesheet" href="css/splide.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
+  <video src="images/x-icon/Tulsa.mp4" mute loop autoplay ></video>
+
   <body>
-    <video src="images/x-icon/Tulsa.mp4" mute loop autoplay ></video>
 
     <header>
       <div class="container">
@@ -40,22 +41,22 @@
           </a>
         </div>
         <div class="menu">
-          <a
+          <!-- <a
             href="https://discord.gg/A9CnsVzzkZ"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/discord.webp" alt="Discord" />
-          </a>
+          </a> -->
           <a
-            href="https://twitter.com/codeSTACKr"
+            href="https://twitter.com/63MontyWilliams"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://testnets.opensea.io/collection/hacksprintflower"
             target="_blank"
             rel="noopener noreferrer"
           >
